# codeslayer.java-plugin

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  java.codeslayer-plugin.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  java-breakpoint.c  java-breakpoint.h  java-breakpoints.c  java-breakpoints.h  java-build-pane.c  java-build-pane.h  java-build.c  java-build.h  java-class-import.c  java-class-import.h  java-class-search.c  java-class-search.h  java-client.c  java-client.h  java-completion-class.c  java-completion-class.h  java-completion-method.c  java-completion-method.h  java-completion-provider.c  java-completion-provider.h  java-completion-variable.c  java-completion-variable.h  java-completion-word.c  java-completion-word.h  java-completion.c  java-completion.h  java-configuration.c  java-configuration.h  java-configurations.c  java-configurations.h  java-debugger-breakpoint.c  java-debugger-breakpoint.h  java-debugger-breakpoints.c  java-debugger-breakpoints.h  java-debugger-column.c  java-debugger-column.h  java-debugger-pane.c  java-debugger-pane.h  (+53 more)
