INCLUDES = \
    $(JAVACODESLAYERPLUGIN_CFLAGS) \
    -I$(top_srcdir) \
    -I$(srcdir)

lib_LTLIBRARIES = libjavacodeslayerplugin.la

libjavacodeslayerplugin_la_SOURCES = \
    java-engine.h \
    java-engine.c \
    java-configuration.h \
    java-configuration.c \
    java-menu.h \
    java-menu.c \
    java-projects-popup.h \
    java-projects-popup.c \
    java-project-properties.h \
    java-project-properties.c \
    java-notebook.h \
    java-notebook.c \
    java-notebook-page.h \
    java-notebook-page.c \
    java-notebook-tab.h \
    java-notebook-tab.c \
    java-plugin.c

libjavacodeslayerplugin_la_CPPFLAGS = -I$(top_srcdir)
