INCLUDES = \
    $(JAVACODESLAYERPLUGIN_CFLAGS) \
    -I$(top_srcdir) \
    -I$(srcdir)

lib_LTLIBRARIES = libjavacodeslayerplugin.la

libjavacodeslayerplugin_la_SOURCES = \
    java-engine.h \
    java-engine.c \
    java-page.h \
    java-page.c \
    java-output.h \
    java-output.c \
    java-output-pane.h \
    java-output-pane.c \
    java-configurations.h \
    java-configurations.c \
    java-configuration.h \
    java-configuration.c \
    java-menu.h \
    java-menu.c \
    java-projects-popup.h \
    java-projects-popup.c \
    java-project-properties.h \
    java-project-properties.c \
    java-notebook.h \
    java-notebook.c \
    java-notebook-tab.h \
    java-notebook-tab.c \
    java-indexer.h \
    java-indexer.c \
    java-indexer-index.h \
    java-indexer-index.c \
    java-debugger.h \
    java-debugger.c \
    java-debugger-column.h \
    java-debugger-column.c \
    java-debugger-pane.h \
    java-debugger-pane.c \
    java-debugger-service.h \
    java-debugger-service.c \
    java-debugger-breakpoints.h \
    java-debugger-breakpoints.c \
    java-debugger-breakpoint.h \
    java-debugger-breakpoint.c \
    java-completion.h \
    java-completion.c \
    java-completion-provider.h \
    java-completion-provider.c \
    java-utils.h \
    java-utils.c \
    java-plugin.c

libjavacodeslayerplugin_la_CPPFLAGS = -I$(top_srcdir)
